# ConstrFL

./: LICENSE  README.md
har_federated/: README.md  README_DISTILLATION.md  analyze_run.py  final_test_evaluation.py  plot_client_metrics.py  pyproject.toml
har_federated/har/: __init__.py  client_app.py  client_metrics.py  compressed_parameters.py  compressed_strategy.py  compute_aware_partitioner.py  data_utils.py  distillation_strategy.py  early_stopping.py  gradient_compression.py  metrics.py  server_app.py  task.py
mnist_federated/: README.md  README_METRICS.md  README_NEW.md  final_test_evaluation.py  pyproject.toml
mnist_federated/mnist_optimised/: __init__.py  client_app.py  client_metrics.py  compressed_parameters.py  compressed_strategy.py  compute_aware_partitioner.py  data_utils.py  metrics.py  server_app.py  task.py
wisdm_federated/: README.md  README_COMPLETE.md  README_METRICS.md  README_WISDM.md  final_test_evaluation.py  pyproject.toml
wisdm_federated/wisdm/: __init__.py  client_app.py  client_app_advanced.py  client_metrics.py  compressed_parameters.py  compressed_strategy.py  data_utils.py  early_stopping.py  metrics.py  server_app.py  server_app_advanced.py  task.py  wisdm_dataset.py
