# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wisdm"
version = "1.0.0"
description = "Federated Learning for WISDM Human Activity Recognition"
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "tensorflow==2.15.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "psutil>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "alde"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "wisdm.server_app:app"
clientapp = "wisdm.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 15
local-epochs = 2
batch-size = 32
verbose = false
fraction-evaluate = 0.0  # Server evaluation only
num-classes = 6
compute-aware = false
# data-path = "./data/wisdm/partitions"  # Optional: pre-generated partitions

# 🆕 Gradient Compression (Fase 2) - OPTIMIZATION_ROADMAP
compression-type = "none"          # Options: "none", "quantization", "topk"
compression-num-bits = 8           # For quantization: 8 or 16 bits
compression-k-percent = 0.1        # For topk: 0.01-1.0 (10% = 0.1)

# 🆕 Early Stopping (Phase 4) - Local validation split and early stopping
local-val-split = 0.2               # Fraction of train data for local validation (0.2=20%, enables early stopping)
early-stopping-enabled = true       # Enable early stopping based on local validation loss
early-stopping-patience = 3         # Number of epochs with no improvement before stopping
early-stopping-min-delta = 0.001    # Minimum change in validation loss to be considered improvement
early-stopping-min-epochs = 0       # Minimum epochs before allowing early stopping (prevents premature stopping)
early-stopping-adaptive = false     # Use adaptive patience that decreases over rounds

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-deployment"

# Local deployment federation (requires manual SuperLink and SuperNode setup)
[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
options.num-supernodes = 3

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "192.168.1.121:9093"  # <-- Replace with your SuperLink address
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
